--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="./style.css" />
-    <title>25+5</title>
+    <title>Quote Generator</title>
 </head>
 <body id="all">
     
